--- a/notebooks/SingleQubit_tiny_PTQ.ipynb
+++ b/notebooks/SingleQubit_tiny_PTQ.ipynb
@@ -9,10 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data1/jcampos/.conda/envs/ml4qick-env/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/data1/jcampos/.conda/envs/ml4qick-env/lib/python3.7/site-packages/torch/cuda/__init__.py:83: UserWarning: CUDA initialization: The NVIDIA driver on your system is too old (found version 9010). Please update your GPU driver by downloading and installing a new version from the URL: http://www.nvidia.com/Download/index.aspx Alternatively, go to: https://pytorch.org to install a PyTorch version that has been compiled with your version of the CUDA driver. (Triggered internally at  ../c10/cuda/CUDAFunctions.cpp:109.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
+      "/home/jcampos/miniforge3/envs/ml4qick-env/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -108,7 +106,7 @@
      "output_type": "stream",
      "text": [
       "Readout Fidelity: % 95.3000009059906\n",
-      "Model Parameters: % 501252\n"
+      "LayerName Parameters: % 501252\n"
      ]
     }
    ],
@@ -139,7 +137,7 @@
     "print('Readout Fidelity: %', accuracy*100)\n",
     "\n",
     "num_parameters = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print('Model Parameters: %', num_parameters)\n"
+    "print('LayerName Parameters: %', num_parameters)\n"
    ]
   },
   {
@@ -269,8 +267,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-02-09 13:14:34.621143: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /data/Xilinx/Vitis/2019.2/lib/lnx64.o/Default:/data/Xilinx/Vitis/2019.2/lib/lnx64.o:/data/Xilinx/Vitis/2019.2/runtime/lib/x86_64:/data/Xilinx/Vitis/2019.2/lib/lnx64.o/Default:/data/Xilinx/Vitis/2019.2/lib/lnx64.o:/data/Xilinx/Vitis/2019.2/runtime/lib/x86_64\n",
-      "2023-02-09 13:14:34.621171: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2023-02-09 14:54:57.415403: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-02-09 14:54:57.415425: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -285,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,69 +291,73 @@
     "\n",
     "weight_precision = 'ap_fixed<12,2>'\n",
     "result_precision = 'ap_fixed<24,10>'\n",
-    "reduced_result_precision = 'ap_fxied<12,4>'"
+    "reduced_result_precision = 'ap_fixed<12,4>'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config ={}\n",
+    "hls_config ={}\n",
     "\n",
-    "config['Model'] = {}\n",
-    "config['Model']['ReuseFactor'] = reusefactor\n",
-    "config['Model']['Precision'] = result_precision\n",
-    "config['Model']['Strategy'] = 'resource'\n",
+    "hls_config['Model'] = {}\n",
+    "hls_config['LayerName'] = {}\n",
+    "hls_config['Model']['ReuseFactor'] = reusefactor\n",
+    "hls_config['Model']['Precision'] = \"ap_fixed<10,10>\"\n",
+    "hls_config['Model']['Strategy'] = 'resource'\n",
+    "\n",
     "### layers\n",
-    "config['Model']['bn'] = {}\n",
-    "config['Model']['linear1'] = {}\n",
-    "config['Model']['linear2'] = {}\n",
-    "config['Model']['bn']['Precision'] = {}\n",
-    "config['Model']['linear1']['Precision'] = {}\n",
-    "config['Model']['linear2']['Precision'] = {}\n",
+    "hls_config['LayerName']['bn'] = {}\n",
+    "hls_config['LayerName']['linear1'] = {}\n",
+    "hls_config['LayerName']['linear2'] = {}\n",
+    "hls_config['LayerName']['bn']['Precision'] = {}\n",
+    "hls_config['LayerName']['linear1']['Precision'] = {}\n",
+    "hls_config['LayerName']['linear2']['Precision'] = {}\n",
     "\n",
     "# weight\n",
-    "config['Model']['bn']['Precision']['scale'] = weight_precision\n",
-    "config['Model']['linear1']['Precision']['weight'] = weight_precision\n",
-    "config['Model']['linear2']['Precision']['weight'] = weight_precision\n",
+    "hls_config['LayerName']['bn']['Precision']['scale'] = weight_precision\n",
+    "hls_config['LayerName']['linear1']['Precision']['weight'] = weight_precision\n",
+    "hls_config['LayerName']['linear2']['Precision']['weight'] = weight_precision\n",
+    "\n",
     "# bias\n",
-    "config['Model']['bn']['Precision']['bias'] = weight_precision\n",
-    "config['Model']['linear1']['Precision']['bias'] = weight_precision\n",
-    "config['Model']['linear2']['Precision']['bias'] = weight_precision\n",
+    "hls_config['LayerName']['bn']['Precision']['bias'] = weight_precision\n",
+    "hls_config['LayerName']['linear1']['Precision']['bias'] = weight_precision\n",
+    "hls_config['LayerName']['linear2']['Precision']['bias'] = weight_precision\n",
     "\n",
     "# accum \n",
-    "config['Model']['bn']['Precision']['accum_t'] = result_precision\n",
-    "config['Model']['linear1']['Precision']['accum_t'] = result_precision\n",
-    "config['Model']['linear2']['Precision']['accum_t'] = result_precision\n",
-    "config['Model']['bn']['accum_t'] = result_precision\n",
-    "config['Model']['linear1']['accum_t'] = result_precision\n",
-    "config['Model']['linear2']['accum_t'] = result_precision\n",
+    "hls_config['LayerName']['bn']['Precision']['accum_t'] = result_precision\n",
+    "hls_config['LayerName']['linear1']['Precision']['accum_t'] = result_precision\n",
+    "hls_config['LayerName']['linear2']['Precision']['accum_t'] = result_precision\n",
+    "hls_config['LayerName']['bn']['accum_t'] = result_precision\n",
+    "hls_config['LayerName']['linear1']['accum_t'] = result_precision\n",
+    "hls_config['LayerName']['linear2']['accum_t'] = result_precision\n",
+    "\n",
     "# result\n",
-    "config['Model']['bn']['Precision']['result'] = reduced_result_precision\n",
-    "config['Model']['linear1']['Precision']['result'] = result_precision\n",
-    "config['Model']['linear2']['Precision']['result'] = reduced_result_precision\n",
+    "hls_config['LayerName']['bn']['Precision']['result'] = reduced_result_precision\n",
+    "hls_config['LayerName']['linear1']['Precision']['result'] = result_precision\n",
+    "hls_config['LayerName']['linear2']['Precision']['result'] = reduced_result_precision\n",
     "\n",
     "# reusefactor\n",
-    "config['Model']['bn']['ReuseFactor'] = reusefactor\n",
-    "config['Model']['linear1']['ReuseFactor'] = reusefactor\n",
-    "config['Model']['linear2']['ReuseFactor'] = 500\n",
+    "hls_config['LayerName']['bn']['ReuseFactor'] = reusefactor\n",
+    "hls_config['LayerName']['linear1']['ReuseFactor'] = reusefactor\n",
+    "hls_config['LayerName']['linear2']['ReuseFactor'] = 500\n",
     "\n",
     "## activation\n",
-    "config['Model']['relu1'] = {}\n",
-    "config['Model']['relu2'] = {}\n",
-    "config['Model']['relu1']['Precision'] = {}\n",
-    "config['Model']['relu2']['Precision'] = {}\n",
-    "config['Model']['relu1']['Precision'] = result_precision\n",
-    "config['Model']['relu2']['Precision'] = reduced_result_precision\n",
-    "config['Model']['relu1']['ReuseFactor'] = reusefactor\n",
-    "config['Model']['relu2']['ReuseFactor'] = reusefactor\n"
+    "hls_config['LayerName']['relu1'] = {}\n",
+    "hls_config['LayerName']['relu2'] = {}\n",
+    "hls_config['LayerName']['relu1']['Precision'] = {}\n",
+    "hls_config['LayerName']['relu2']['Precision'] = {}\n",
+    "hls_config['LayerName']['relu1']['Precision'] = result_precision\n",
+    "hls_config['LayerName']['relu2']['Precision'] = reduced_result_precision\n",
+    "hls_config['LayerName']['relu1']['ReuseFactor'] = reusefactor\n",
+    "hls_config['LayerName']['relu2']['ReuseFactor'] = reusefactor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -376,14 +378,15 @@
       "------------------------------------------------------\n",
       "Model\n",
       "  ReuseFactor:       500000\n",
-      "  Precision:         ap_fixed<24,10>\n",
+      "  Precision:         ap_fixed<10,10>\n",
       "  Strategy:          resource\n",
+      "LayerName\n",
       "  bn\n",
       "    Precision\n",
       "      scale:         ap_fixed<12,2>\n",
       "      bias:          ap_fixed<12,2>\n",
       "      accum_t:       ap_fixed<24,10>\n",
-      "      result:        ap_fxied<12,4>\n",
+      "      result:        ap_fixed<12,4>\n",
       "    accum_t:         ap_fixed<24,10>\n",
       "    ReuseFactor:     500000\n",
       "  linear1\n",
@@ -399,14 +402,14 @@
       "      weight:        ap_fixed<12,2>\n",
       "      bias:          ap_fixed<12,2>\n",
       "      accum_t:       ap_fixed<24,10>\n",
-      "      result:        ap_fxied<12,4>\n",
+      "      result:        ap_fixed<12,4>\n",
       "    accum_t:         ap_fixed<24,10>\n",
       "    ReuseFactor:     500\n",
       "  relu1\n",
       "    Precision:       ap_fixed<24,10>\n",
       "    ReuseFactor:     500000\n",
       "  relu2\n",
-      "    Precision:       ap_fxied<12,4>\n",
+      "    Precision:       ap_fixed<12,4>\n",
       "    ReuseFactor:     500000\n",
       "------------------------------------------------------\n",
       "Interpreting Model ...\n",
@@ -418,7 +421,9 @@
       "Layer name: linear2, layer type: Dense, input shape: [[1, 250]]\n",
       "Layer name: relu2, layer type: Activation, input shape: [[1, 2]]\n",
       "Creating HLS model\n",
-      "WARNING: Invalid ReuseFactor=500000 in layer \"linear2\".Using ReuseFactor=500 instead. Valid ReuseFactor(s): 1,2,5,10,25,50,125,250,500.\n",
+      "WARNING: Config parameter \"accum_t\" overwrites an existing attribute in layer \"linear1\" (Dense)\n",
+      "WARNING: Config parameter \"accum_t\" overwrites an existing attribute in layer \"bn\" (BatchNormalization)\n",
+      "WARNING: Config parameter \"accum_t\" overwrites an existing attribute in layer \"linear2\" (Dense)\n",
       "Creating hls4ml project directory hls4ml_prj_tmp/hls4ml_prj_resource_rf500000\n",
       "Writing HLS project\n",
       "Done\n"
@@ -426,8 +431,6 @@
     }
    ],
    "source": [
-    "hls_config = config\n",
-    "\n",
     "print(\"------------------------------------------------------\")\n",
     "print_dict(hls_config)\n",
     "print(\"------------------------------------------------------\")\n",
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +463,7 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------\n",
-      "HLS fidelity: 0.893000\n",
+      "HLS fidelity: 0.877000\n",
       "------------------------------------------------------\n"
      ]
     }
