--- a/notebooks/2. SingleQubit_tiny_PTQ.ipynb
+++ b/notebooks/2. SingleQubit_tiny_PTQ.ipynb
@@ -191,7 +191,7 @@
     "    data_min = min(weight_data.min(), bias_data.min())\n",
     "    data_max = max(weight_data.max(), bias_data.max())\n",
     "    axs[idx].axvline(x=data_min, color='red', ls=':', label=f'min={data_min:.2f}')\n",
-    "    axs[idx].axvline(x=data_max, color='red', ls=':', label=f'min={data_max:.2f}')\n",
+    "    axs[idx].axvline(x=data_max, color='red', ls=':', label=f'max={data_max:.2f}')\n",
     "    \n",
     "    axs[idx].title.set_text(layer_name)\n",
     "    axs[idx].legend(loc='upper right')\n",
