Add mock data results

--- a/notebooks/workflow.ipynb
+++ b/notebooks/workflow.ipynb
@@ -577,9 +577,33 @@
     "import csv\n",
     "import pandas as pd\n",
     "\n",
+    "from ctypes import *\n",
+    "def to_float(i):\n",
+    "    cp = pointer(c_int(i))\n",
+    "    fp = cast(cp, POINTER(c_float))\n",
+    "    return fp.contents.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### demo00/send_receive_pulse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load CSV files from board runs\n",
+    "\n",
+    "# X\n",
     "df = pd.read_csv(DATA_DIR + '/fpga_testing/X_fpga.csv', header=None)\n",
     "X_test_board = df.values\n",
     "\n",
+    "# y\n",
     "df = pd.read_csv(DATA_DIR + '/fpga_testing/y_fpga.csv', header=None)\n",
     "y_test_board = df.values"
    ]
@@ -590,25 +614,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ctypes import *\n",
-    "def to_float(i):\n",
-    "    cp = pointer(c_int(i))\n",
-    "    fp = cast(cp, POINTER(c_float))\n",
-    "    return fp.contents.value\n",
-    "\n",
-    "# for i in range(y_test_board.shape[0]):\n",
-    "#     g_ref = y_test_board[i][0]\n",
-    "#     e_ref = y_test_board[i][1]\n",
-    "#     print('board[{}] [{:.12f}, {:.12f}]'.format(i, to_float(g_ref), to_float(e_ref)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# X -> QKeras -> y\n",
     "y_qkeras_pred = model.predict(X_test_board)\n",
+    "\n",
+    "# X -> HLS -> y (csim)\n",
     "y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
    ]
   },
@@ -621,6 +630,7 @@
     "test_size = y_test_board.shape[0]\n",
     "errors = 0\n",
     "\n",
+    "# Count mismatches (QKeras != HLS)\n",
     "for i in range(test_size):\n",
     "    g_ref = to_float(y_test_board[i][0])\n",
     "    e_ref = to_float(y_test_board[i][1])\n",
@@ -654,7 +664,240 @@
     "```\n",
     "Errors: 761/6235 (12.21%)\n",
     "```\n",
-    "**ATTENTION:** We should expect _0_ errors because we are comparing board vs. hls implementations."
+    "**ATTENTION:** We should expect _0_ errors (i.e. logits should match) because we are comparing board vs. hls implementations.\n",
+    "\n",
+    "Given these and following results, my current guess is a problem with timing/triggering. The NN reads 200 I/Q samples after a trigger event + some delay. The delay in some cases should be a little earlier or later than expected.\n",
+    "\n",
+    "```\n",
+    "I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, ..., I, Q, I, Q, I, Q\n",
+    "      ^\n",
+    "      Trigger\n",
+    "      <-------->\n",
+    "         delay\n",
+    "                  <--------------------------------- 200 samples -------------------------------------------->\n",
+    "\n",
+    "             <=================================== 200 samples ==========================================>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mock readout data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ground state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load CSV files from board runs\n",
+    "\n",
+    "# X (ground)\n",
+    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_g_state_X_fpga.csv', header=None)\n",
+    "X_test_board = df.values\n",
+    "\n",
+    "# y (ground)\n",
+    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_g_state_y_fpga.csv', header=None)\n",
+    "y_test_board = df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X -> QKeras -> y\n",
+    "y_qkeras_pred = model.predict(X_test_board)\n",
+    "\n",
+    "# X -> HLS -> y (csim)\n",
+    "y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_size = y_test_board.shape[0]\n",
+    "\n",
+    "logit_errors = 0\n",
+    "class_errors = 0\n",
+    "\n",
+    "# Count mismatches (QKeras != HLS)\n",
+    "# Count ground predictions (HLS)\n",
+    "for i in range(test_size):\n",
+    "    g_ref = to_float(y_test_board[i][0])\n",
+    "    e_ref = to_float(y_test_board[i][1])\n",
+    "\n",
+    "    g_hls = y_hls_pred[i][0]\n",
+    "    e_hls = y_hls_pred[i][1]\n",
+    "\n",
+    "    mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
+    "    ground_state_ref = (g_ref > e_ref)\n",
+    "    ground_state_hls = (g_hls > e_hls)\n",
+    "    print('board[{}] [{:.12f}, {:.12f}] {:s} '.format(i, g_ref, e_ref, 'G' if ground_state_ref else 'E'))\n",
+    "    print('hls  [{}] [{:.12f}, {:.12f}] {:s} {:s}'.format(i, g_hls, e_hls, 'G' if ground_state_hls else 'E', '***' if mismatch else ''))\n",
+    "    print('')\n",
+    "    if (mismatch):\n",
+    "        logit_errors = logit_errors + 1\n",
+    "    if (not ground_state_ref):\n",
+    "        class_errors = class_errors + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logit_error_rate = (logit_errors * 100.) / test_size\n",
+    "class_error_rate = (class_errors * 100.) / test_size\n",
+    "print('Logit errors: {:d}/{:d} ({:.2f}%)'.format(logit_errors, test_size, logit_error_rate))\n",
+    "print('Class errors: {:d}/{:d} ({:.2f}%)'.format(class_errors, test_size, class_error_rate))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you run with the model and **board** data on files, you should expect\n",
+    "```\n",
+    "Logit errors: 435/3100 (14.03%)\n",
+    "Class errors: 0/3100 (0.00%)\n",
+    "```\n",
+    "**ATTENTION:** We should expect _0_ errors because we are comparing board vs. hls implementations.\n",
+    "\n",
+    "Given these results, my current guess is a problem with timing/triggering. The NN reads 200 I/Q samples after a trigger event + some delay. The delay in some cases should be a little earlier or later than expected.\n",
+    "\n",
+    "```\n",
+    "I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, ..., I, Q, I, Q, I, Q\n",
+    "      ^\n",
+    "      Trigger\n",
+    "      <-------->\n",
+    "         delay\n",
+    "                  <--------------------------------- 200 samples -------------------------------------------->\n",
+    "\n",
+    "             <=================================== 200 samples ==========================================>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Excited state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load CSV files from board runs\n",
+    "\n",
+    "# X (excited)\n",
+    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_e_state_X_fpga.csv', header=None)\n",
+    "X_test_board = df.values\n",
+    "\n",
+    "# y (excited)\n",
+    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_e_state_y_fpga.csv', header=None)\n",
+    "y_test_board = df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X -> QKeras -> y\n",
+    "y_qkeras_pred = model.predict(X_test_board)\n",
+    "\n",
+    "# X -> HLS -> y (csim)\n",
+    "y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_size = y_test_board.shape[0]\n",
+    "\n",
+    "logit_errors = 0\n",
+    "class_errors = 0\n",
+    "\n",
+    "# Count mismatches (QKeras != HLS)\n",
+    "# Count excited predictions (HLS)\n",
+    "for i in range(test_size):\n",
+    "    g_ref = to_float(y_test_board[i][0])\n",
+    "    e_ref = to_float(y_test_board[i][1])\n",
+    "\n",
+    "    g_hls = y_hls_pred[i][0]\n",
+    "    e_hls = y_hls_pred[i][1]\n",
+    "\n",
+    "    mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
+    "    excited_state_ref = (e_ref > g_ref)\n",
+    "    excited_state_hls = (e_hls > g_hls)\n",
+    "\n",
+    "    print('board[{}] [{:.12f}, {:.12f}] {:s} '.format(i, g_ref, e_ref, 'E' if excited_state_ref else 'G'))\n",
+    "    print('hls  [{}] [{:.12f}, {:.12f}] {:s} {:s}'.format(i, g_hls, e_hls, 'E' if excited_state_hls else 'G', '***' if mismatch else ''))\n",
+    "    print('')\n",
+    "    if (mismatch):\n",
+    "        logit_errors = logit_errors + 1\n",
+    "    if (not excited_state_ref):\n",
+    "        class_errors = class_errors + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logit_error_rate = (logit_errors * 100.) / test_size\n",
+    "class_error_rate = (class_errors * 100.) / test_size\n",
+    "print('Logit errors: {:d}/{:d} ({:.2f}%)'.format(logit_errors, test_size, logit_error_rate))\n",
+    "print('Class errors: {:d}/{:d} ({:.2f}%)'.format(class_errors, test_size, class_error_rate))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you run with the model and **board** data on files, you should expect\n",
+    "```\n",
+    "Logit errors: 440/3100 (14.19%)\n",
+    "Class errors: 0/3100 (0.00%)\n",
+    "```\n",
+    "**ATTENTION:** We should expect _0_ errors because we are comparing board vs. hls implementations.\n",
+    "\n",
+    "Given these results, my current guess is a problem with timing/triggering. The NN reads 200 I/Q samples after a trigger event + some delay. The delay in some cases should be a little earlier or later than expected.\n",
+    "\n",
+    "```\n",
+    "I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, I, Q, ..., I, Q, I, Q, I, Q\n",
+    "      ^\n",
+    "      Trigger\n",
+    "      <-------->\n",
+    "         delay\n",
+    "                  <--------------------------------- 200 samples -------------------------------------------->\n",
+    "\n",
+    "             <=================================== 200 samples ==========================================>\n",
+    "```"
    ]
   },
   {
