Update workflow notebook (disable board vs. hls comparison)

--- a/notebooks/workflow.ipynb
+++ b/notebooks/workflow.ipynb
@@ -311,6 +311,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('=============================Model Summary=============================')\n",
+    "print(model.summary())\n",
+    "print('=======================================================================')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -574,14 +585,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import pandas as pd\n",
+    "# import csv\n",
+    "# import pandas as pd\n",
     "\n",
-    "from ctypes import *\n",
-    "def to_float(i):\n",
-    "    cp = pointer(c_int(i))\n",
-    "    fp = cast(cp, POINTER(c_float))\n",
-    "    return fp.contents.value"
+    "# from ctypes import *\n",
+    "# def to_float(i):\n",
+    "#     cp = pointer(c_int(i))\n",
+    "#     fp = cast(cp, POINTER(c_float))\n",
+    "#     return fp.contents.value"
    ]
   },
   {
@@ -597,15 +608,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load CSV files from board runs\n",
+    "# # Load CSV files from board runs\n",
     "\n",
-    "# X\n",
-    "df = pd.read_csv(DATA_DIR + '/fpga_testing/X_fpga.csv', header=None)\n",
-    "X_test_board = df.values\n",
+    "# # X\n",
+    "# df = pd.read_csv(DATA_DIR + '/fpga_testing/dev_X_fpga.csv', header=None)\n",
+    "# X_test_board = df.values\n",
     "\n",
-    "# y\n",
-    "df = pd.read_csv(DATA_DIR + '/fpga_testing/y_fpga.csv', header=None)\n",
-    "y_test_board = df.values"
+    "# # y\n",
+    "# df = pd.read_csv(DATA_DIR + '/fpga_testing/dev_y_fpga.csv', header=None)\n",
+    "# y_test_board = df.values"
    ]
   },
   {
@@ -614,11 +625,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X -> QKeras -> y\n",
-    "y_qkeras_pred = model.predict(X_test_board)\n",
+    "# # X -> QKeras -> y\n",
+    "# y_qkeras_pred = model.predict(X_test_board)\n",
     "\n",
-    "# X -> HLS -> y (csim)\n",
-    "y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
+    "# # X -> HLS -> y (csim)\n",
+    "# y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
    ]
   },
   {
@@ -627,23 +638,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_size = y_test_board.shape[0]\n",
-    "errors = 0\n",
+    "# test_size = y_test_board.shape[0]\n",
+    "# errors = 0\n",
     "\n",
-    "# Count mismatches (QKeras != HLS)\n",
-    "for i in range(test_size):\n",
-    "    g_ref = to_float(y_test_board[i][0])\n",
-    "    e_ref = to_float(y_test_board[i][1])\n",
+    "# # Count mismatches (QKeras != HLS)\n",
+    "# for i in range(test_size):\n",
+    "#     g_ref = to_float(y_test_board[i][0])\n",
+    "#     e_ref = to_float(y_test_board[i][1])\n",
     "\n",
-    "    g_hls = y_hls_pred[i][0]\n",
-    "    e_hls = y_hls_pred[i][1]\n",
+    "#     g_hls = y_hls_pred[i][0]\n",
+    "#     e_hls = y_hls_pred[i][1]\n",
     "\n",
-    "    mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
-    "    print('board[{}] [{:.12f}, {:.12f}]'.format(i, g_ref, e_ref))\n",
-    "    print('hls  [{}] [{:.12f}, {:.12f}] {:s}'.format(i, g_hls, e_hls, '***' if mismatch else ''))\n",
-    "    print('')\n",
-    "    if (mismatch):\n",
-    "        errors = errors + 1"
+    "#     mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
+    "#     print('board[{}] [{:.12f}, {:.12f}]'.format(i, g_ref, e_ref))\n",
+    "#     print('hls  [{}] [{:.12f}, {:.12f}] {:s}'.format(i, g_hls, e_hls, '***' if mismatch else ''))\n",
+    "#     print('')\n",
+    "#     if (mismatch):\n",
+    "#         errors = errors + 1"
    ]
   },
   {
@@ -652,8 +663,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "error_rate = (errors * 100.) / test_size\n",
-    "print('Errors: {:d}/{:d} ({:.2f}%)'.format(errors, test_size, error_rate))"
+    "# error_rate = (errors * 100.) / test_size\n",
+    "# print('Errors: {:d}/{:d} ({:.2f}%)'.format(errors, test_size, error_rate))"
    ]
   },
   {
@@ -700,15 +711,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load CSV files from board runs\n",
+    "# # Load CSV files from board runs\n",
     "\n",
-    "# X (ground)\n",
-    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_g_state_X_fpga.csv', header=None)\n",
-    "X_test_board = df.values\n",
+    "# # X (ground)\n",
+    "# df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_g_state_X_fpga.csv', header=None)\n",
+    "# X_test_board = df.values\n",
     "\n",
-    "# y (ground)\n",
-    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_g_state_y_fpga.csv', header=None)\n",
-    "y_test_board = df.values"
+    "# # y (ground)\n",
+    "# df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_g_state_y_fpga.csv', header=None)\n",
+    "# y_test_board = df.values"
    ]
   },
   {
@@ -717,11 +728,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X -> QKeras -> y\n",
-    "y_qkeras_pred = model.predict(X_test_board)\n",
+    "# # X -> QKeras -> y\n",
+    "# y_qkeras_pred = model.predict(X_test_board)\n",
     "\n",
-    "# X -> HLS -> y (csim)\n",
-    "y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
+    "# # X -> HLS -> y (csim)\n",
+    "# y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
    ]
   },
   {
@@ -730,30 +741,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_size = y_test_board.shape[0]\n",
+    "# test_size = y_test_board.shape[0]\n",
     "\n",
-    "logit_errors = 0\n",
-    "class_errors = 0\n",
+    "# logit_errors = 0\n",
+    "# class_errors = 0\n",
     "\n",
-    "# Count mismatches (QKeras != HLS)\n",
-    "# Count ground predictions (HLS)\n",
-    "for i in range(test_size):\n",
-    "    g_ref = to_float(y_test_board[i][0])\n",
-    "    e_ref = to_float(y_test_board[i][1])\n",
+    "# # Count mismatches (QKeras != HLS)\n",
+    "# # Count ground predictions (HLS)\n",
+    "# for i in range(test_size):\n",
+    "#     g_ref = to_float(y_test_board[i][0])\n",
+    "#     e_ref = to_float(y_test_board[i][1])\n",
     "\n",
-    "    g_hls = y_hls_pred[i][0]\n",
-    "    e_hls = y_hls_pred[i][1]\n",
+    "#     g_hls = y_hls_pred[i][0]\n",
+    "#     e_hls = y_hls_pred[i][1]\n",
     "\n",
-    "    mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
-    "    ground_state_ref = (g_ref > e_ref)\n",
-    "    ground_state_hls = (g_hls > e_hls)\n",
-    "    print('board[{}] [{:.12f}, {:.12f}] {:s} '.format(i, g_ref, e_ref, 'G' if ground_state_ref else 'E'))\n",
-    "    print('hls  [{}] [{:.12f}, {:.12f}] {:s} {:s}'.format(i, g_hls, e_hls, 'G' if ground_state_hls else 'E', '***' if mismatch else ''))\n",
-    "    print('')\n",
-    "    if (mismatch):\n",
-    "        logit_errors = logit_errors + 1\n",
-    "    if (not ground_state_ref):\n",
-    "        class_errors = class_errors + 1"
+    "#     mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
+    "#     ground_state_ref = (g_ref > e_ref)\n",
+    "#     ground_state_hls = (g_hls > e_hls)\n",
+    "#     print('board[{}] [{:.12f}, {:.12f}] {:s} '.format(i, g_ref, e_ref, 'G' if ground_state_ref else 'E'))\n",
+    "#     print('hls  [{}] [{:.12f}, {:.12f}] {:s} {:s}'.format(i, g_hls, e_hls, 'G' if ground_state_hls else 'E', '***' if mismatch else ''))\n",
+    "#     print('')\n",
+    "#     if (mismatch):\n",
+    "#         logit_errors = logit_errors + 1\n",
+    "#     if (not ground_state_ref):\n",
+    "#         class_errors = class_errors + 1"
    ]
   },
   {
@@ -762,10 +773,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logit_error_rate = (logit_errors * 100.) / test_size\n",
-    "class_error_rate = (class_errors * 100.) / test_size\n",
-    "print('Logit errors: {:d}/{:d} ({:.2f}%)'.format(logit_errors, test_size, logit_error_rate))\n",
-    "print('Class errors: {:d}/{:d} ({:.2f}%)'.format(class_errors, test_size, class_error_rate))"
+    "# logit_error_rate = (logit_errors * 100.) / test_size\n",
+    "# class_error_rate = (class_errors * 100.) / test_size\n",
+    "# print('Logit errors: {:d}/{:d} ({:.2f}%)'.format(logit_errors, test_size, logit_error_rate))\n",
+    "# print('Class errors: {:d}/{:d} ({:.2f}%)'.format(class_errors, test_size, class_error_rate))"
    ]
   },
   {
@@ -806,15 +817,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load CSV files from board runs\n",
+    "# # Load CSV files from board runs\n",
     "\n",
-    "# X (excited)\n",
-    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_e_state_X_fpga.csv', header=None)\n",
-    "X_test_board = df.values\n",
+    "# # X (excited)\n",
+    "# df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_e_state_X_fpga.csv', header=None)\n",
+    "# X_test_board = df.values\n",
     "\n",
-    "# y (excited)\n",
-    "df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_e_state_y_fpga.csv', header=None)\n",
-    "y_test_board = df.values"
+    "# # y (excited)\n",
+    "# df = pd.read_csv(DATA_DIR + '/fpga_testing/malab_e_state_y_fpga.csv', header=None)\n",
+    "# y_test_board = df.values"
    ]
   },
   {
@@ -823,11 +834,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X -> QKeras -> y\n",
-    "y_qkeras_pred = model.predict(X_test_board)\n",
+    "# # X -> QKeras -> y\n",
+    "# y_qkeras_pred = model.predict(X_test_board)\n",
     "\n",
-    "# X -> HLS -> y (csim)\n",
-    "y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
+    "# # X -> HLS -> y (csim)\n",
+    "# y_hls_pred = hls_model.predict(np.ascontiguousarray(X_test_board.astype(np.float32)))"
    ]
   },
   {
@@ -836,31 +847,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_size = y_test_board.shape[0]\n",
+    "# test_size = y_test_board.shape[0]\n",
     "\n",
-    "logit_errors = 0\n",
-    "class_errors = 0\n",
+    "# logit_errors = 0\n",
+    "# class_errors = 0\n",
     "\n",
-    "# Count mismatches (QKeras != HLS)\n",
-    "# Count excited predictions (HLS)\n",
-    "for i in range(test_size):\n",
-    "    g_ref = to_float(y_test_board[i][0])\n",
-    "    e_ref = to_float(y_test_board[i][1])\n",
+    "# # Count mismatches (QKeras != HLS)\n",
+    "# # Count excited predictions (HLS)\n",
+    "# for i in range(test_size):\n",
+    "#     g_ref = to_float(y_test_board[i][0])\n",
+    "#     e_ref = to_float(y_test_board[i][1])\n",
     "\n",
-    "    g_hls = y_hls_pred[i][0]\n",
-    "    e_hls = y_hls_pred[i][1]\n",
+    "#     g_hls = y_hls_pred[i][0]\n",
+    "#     e_hls = y_hls_pred[i][1]\n",
     "\n",
-    "    mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
-    "    excited_state_ref = (e_ref > g_ref)\n",
-    "    excited_state_hls = (e_hls > g_hls)\n",
+    "#     mismatch = (g_ref != g_hls) | (e_ref != e_hls)\n",
+    "#     excited_state_ref = (e_ref > g_ref)\n",
+    "#     excited_state_hls = (e_hls > g_hls)\n",
     "\n",
-    "    print('board[{}] [{:.12f}, {:.12f}] {:s} '.format(i, g_ref, e_ref, 'E' if excited_state_ref else 'G'))\n",
-    "    print('hls  [{}] [{:.12f}, {:.12f}] {:s} {:s}'.format(i, g_hls, e_hls, 'E' if excited_state_hls else 'G', '***' if mismatch else ''))\n",
-    "    print('')\n",
-    "    if (mismatch):\n",
-    "        logit_errors = logit_errors + 1\n",
-    "    if (not excited_state_ref):\n",
-    "        class_errors = class_errors + 1"
+    "#     print('board[{}] [{:.12f}, {:.12f}] {:s} '.format(i, g_ref, e_ref, 'E' if excited_state_ref else 'G'))\n",
+    "#     print('hls  [{}] [{:.12f}, {:.12f}] {:s} {:s}'.format(i, g_hls, e_hls, 'E' if excited_state_hls else 'G', '***' if mismatch else ''))\n",
+    "#     print('')\n",
+    "#     if (mismatch):\n",
+    "#         logit_errors = logit_errors + 1\n",
+    "#     if (not excited_state_ref):\n",
+    "#         class_errors = class_errors + 1"
    ]
   },
   {
@@ -869,10 +880,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logit_error_rate = (logit_errors * 100.) / test_size\n",
-    "class_error_rate = (class_errors * 100.) / test_size\n",
-    "print('Logit errors: {:d}/{:d} ({:.2f}%)'.format(logit_errors, test_size, logit_error_rate))\n",
-    "print('Class errors: {:d}/{:d} ({:.2f}%)'.format(class_errors, test_size, class_error_rate))"
+    "# logit_error_rate = (logit_errors * 100.) / test_size\n",
+    "# class_error_rate = (class_errors * 100.) / test_size\n",
+    "# print('Logit errors: {:d}/{:d} ({:.2f}%)'.format(logit_errors, test_size, logit_error_rate))\n",
+    "# print('Class errors: {:d}/{:d} ({:.2f}%)'.format(class_errors, test_size, class_error_rate))"
    ]
   },
   {
