--- a/notebooks/board_comparison.ipynb
+++ b/notebooks/board_comparison.ipynb
@@ -364,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SHIFT_OFFSET = 400\n",
+    "SHIFT_OFFSET = 200\n",
     "SHIFT_L_OR_R = 'L' #'R'"
    ]
   },
@@ -380,7 +380,7 @@
     "\n",
     "def r_shift_data(X, start, end, offset):\n",
     "    extended_X = np.pad(X, pad_width=((0, 0), (offset*2, 0)), mode='constant', constant_values=0)\n",
-    "    return extended_X[:,(start+offset)*2:(end+offset)*2]"
+    "    return extended_X[:,start*2:end*2]"
    ]
   },
   {
@@ -480,8 +480,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SHIFT_L_OR_R = 'L' #'R'\n",
-    "\n",
     "accuracy_swipe_l = np.array([])\n",
     "accuracy_g_swipe_l = np.array([])\n",
     "accuracy_e_swipe_l = np.array([])\n",
@@ -490,6 +488,7 @@
     "accuracy_g_swipe_r = np.array([])\n",
     "accuracy_e_swipe_r = np.array([])\n",
     "\n",
+    "# Swipe and shift left\n",
     "for SHIFT_OFFSET in range(0,770):\n",
     "    shifted_g_data = l_shift_data(X_g_test_board, START_WINDOW, END_WINDOW, SHIFT_OFFSET)\n",
     "    shifted_e_data = l_shift_data(X_e_test_board, START_WINDOW, END_WINDOW, SHIFT_OFFSET)\n",
@@ -533,6 +532,7 @@
     "    accuracy_e_swipe_l = np.append(accuracy_e_swipe_l, acccuracy_e)\n",
     "    accuracy_g_swipe_l = np.append(accuracy_g_swipe_l, acccuracy_g)\n",
     "\n",
+    "# Swipe and shift right\n",
     "for SHIFT_OFFSET in range(0,770):\n",
     "    shifted_g_data = r_shift_data(X_g_test_board, START_WINDOW, END_WINDOW, SHIFT_OFFSET)\n",
     "    shifted_e_data = r_shift_data(X_e_test_board, START_WINDOW, END_WINDOW, SHIFT_OFFSET)\n",
@@ -672,14 +672,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(accuracy_e_swipe_r)\n",
+    "plt.title('Swipe, shift right (excited)')\n",
+    "plt.xlabel('Shift')\n",
+    "plt.ylabel('Accuracy %')\n",
+    "\n",
+    "for i, value in enumerate(accuracy_e_swipe_l):\n",
+    "    if i % 100 == 0:  # Change '3' to your desired interval\n",
+    "        plt.annotate(f'{value:.2f}',  # Format the value to 2 decimal places\n",
+    "                     (i, value),\n",
+    "                     textcoords=\"offset points\",  # How to position the text\n",
+    "                     xytext=(0,10),  # Distance from text to points (x,y)\n",
+    "                     ha='center')  # Horizontal alignment can be left, right or center\n",
+    "\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
