--- a/notebooks/parameter_opt.ipynb
+++ b/notebooks/parameter_opt.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -488,6 +488,49 @@
     "plt.ylabel('Performance')\n",
     "plt.legend()\n",
     "plt.xscale('log')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Rate: 0.1\n",
+      "    Accuracy: 0.96065\n",
+      "    Accuracy: 0.9213\n",
+      "Learning Rate: 0.01\n",
+      "    Accuracy: 0.95991\n",
+      "    Accuracy: 0.9198200000000001\n",
+      "Learning Rate: 0.001\n",
+      "    Accuracy: 0.95992\n",
+      "    Accuracy: 0.91984\n",
+      "Learning Rate: 0.0001\n",
+      "    Accuracy: 0.95947\n",
+      "    Accuracy: 0.9189400000000001\n",
+      "Learning Rate: 1e-05\n",
+      "    Accuracy: 0.95933\n",
+      "    Accuracy: 0.91866\n",
+      "Learning Rate: 1e-06\n",
+      "    Accuracy: 0.95867\n",
+      "    Accuracy: 0.91734\n",
+      "Learning Rate: 1.0000000000000001e-07\n",
+      "    Accuracy: 0.94466\n",
+      "    Accuracy: 0.8893200000000001\n",
+      "Learning Rate: 1e-08\n",
+      "    Accuracy: 0.57486\n",
+      "    Accuracy: 0.14972000000000008\n"
+     ]
+    }
+   ],
+   "source": [
+    "for lr, acc in zip(learning_rates, all_accuracy):\n",
+    "    print('Learning Rate:', lr)\n",
+    "    print('    Accuracy:', acc)\n",
+    "    print('    Accuracy:', acc*2-1)\n"
    ]
   },
   {
