--- a/notebooks/parameter_opt.ipynb
+++ b/notebooks/parameter_opt.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -501,28 +501,28 @@
      "text": [
       "Learning Rate: 0.1\n",
       "    Accuracy: 0.96065\n",
-      "    Accuracy: 0.9213\n",
+      "    Fidelity: 0.9213\n",
       "Learning Rate: 0.01\n",
       "    Accuracy: 0.95991\n",
-      "    Accuracy: 0.9198200000000001\n",
+      "    Fidelity: 0.9198200000000001\n",
       "Learning Rate: 0.001\n",
       "    Accuracy: 0.95992\n",
-      "    Accuracy: 0.91984\n",
+      "    Fidelity: 0.91984\n",
       "Learning Rate: 0.0001\n",
       "    Accuracy: 0.95947\n",
-      "    Accuracy: 0.9189400000000001\n",
+      "    Fidelity: 0.9189400000000001\n",
       "Learning Rate: 1e-05\n",
       "    Accuracy: 0.95933\n",
-      "    Accuracy: 0.91866\n",
+      "    Fidelity: 0.91866\n",
       "Learning Rate: 1e-06\n",
       "    Accuracy: 0.95867\n",
-      "    Accuracy: 0.91734\n",
+      "    Fidelity: 0.91734\n",
       "Learning Rate: 1.0000000000000001e-07\n",
       "    Accuracy: 0.94466\n",
-      "    Accuracy: 0.8893200000000001\n",
+      "    Fidelity: 0.8893200000000001\n",
       "Learning Rate: 1e-08\n",
       "    Accuracy: 0.57486\n",
-      "    Accuracy: 0.14972000000000008\n"
+      "    Fidelity: 0.14972000000000008\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
     "for lr, acc in zip(learning_rates, all_accuracy):\n",
     "    print('Learning Rate:', lr)\n",
     "    print('    Accuracy:', acc)\n",
-    "    print('    Accuracy:', acc*2-1)\n"
+    "    print('    Fidelity:', acc*2-1)\n"
    ]
   },
   {
