--- a/notebooks/scan_window_location_and_size_NN.ipynb
+++ b/notebooks/scan_window_location_and_size_NN.ipynb
@@ -436,19 +436,19 @@
     "\n",
     "# 64 total runs \n",
     "for idx, window_size in enumerate(all_window_sizes):\n",
+    "    X_train_val = np.load(x_train_path)  # need to load data again to avoid memory issues \n",
+    "    X_test = np.load(x_test_path)\n",
     "    for jdx, start_location in enumerate(all_window_start_locations):\n",
     "        #########################\n",
     "        # 0. prep data \n",
     "        #########################\n",
     "        # check if window size is too big for start location\n",
     "        if start_location+window_size > 770:\n",
-    "            all_fidelity[idx, jdx] = -1\n",
+    "            all_fidelity[idx, jdx] = np.nan\n",
     "            print(f'Skipping start location={start_location}, window size={window_size}')\n",
     "            continue\n",
-    "        X_train_val = np.load(x_train_path)  # need to load data again to avoid memory issues \n",
-    "        X_test = np.load(x_test_path)\n",
-    "        X_train_val = X_train_val[:,start_location*2:(start_location+window_size)*2]\n",
-    "        X_test = X_test[:,start_location*2:(start_location+window_size)*2]\n",
+    "        X_train_val_window = X_train_val[:,start_location*2:(start_location+window_size)*2]\n",
+    "        X_test_window = X_test[:,start_location*2:(start_location+window_size)*2]\n",
     "\n",
     "        #########################\n",
     "        # 1. init callbacks\n",
@@ -487,7 +487,7 @@
     "        # 3. train \n",
     "        #########################\n",
     "        history = model.fit(\n",
-    "            X_train_val, \n",
+    "            X_train_val_window, \n",
     "            y_train_val, \n",
     "            batch_size=batch_size,\n",
     "            epochs=epochs, \n",
@@ -507,42 +507,11 @@
     "        #########################\n",
     "        # 4. compute fidelity \n",
     "        #########################\n",
-    "        y_pred = model.predict(X_test)\n",
+    "        y_pred = model.predict(X_test_window)\n",
     "        test_acc = accuracy_score(np.argmax(y_test, axis=1), np.argmax(y_pred, axis=1))\n",
     "        all_accuracy[idx, jdx] = test_acc\n",
     "        all_fidelity[idx, jdx] = test_acc*2-1\n",
     "        \n",
-    "        # # get ground and excited indices \n",
-    "        # e_indices = np.where(np.argmax(y_test, axis=1) == 1)[0]\n",
-    "        # g_indices = np.where(np.argmax(y_test, axis=1) == 0)[0]\n",
-    "\n",
-    "        # # separate ground and excited samples \n",
-    "        # Xe_test = X_test_window[e_indices]\n",
-    "        # ye_test = np.argmax(y_test, axis=1)[e_indices]\n",
-    "\n",
-    "        # Xg_test = X_test_window[g_indices]\n",
-    "        # yg_test = np.argmax(y_test, axis=1)[g_indices]\n",
-    "\n",
-    "        # # compute total correct for excited state \n",
-    "        # ye_pred = model.predict(Xe_test)\n",
-    "        # e_accuracy = accuracy_score(ye_test, np.argmax(ye_pred, axis=1))\n",
-    "\n",
-    "        # total_correct = (ye_test==np.argmax(ye_pred, axis=1)).astype(np.int8).sum()\n",
-    "        # total_incorrect = (ye_test!=np.argmax(ye_pred, axis=1)).astype(np.int8).sum()\n",
-    "\n",
-    "        # # compute total correct for ground state \n",
-    "        # yg_pred = model.predict(Xg_test)\n",
-    "        # g_accuracy = accuracy_score(yg_test, np.argmax(yg_pred, axis=1))\n",
-    "\n",
-    "        # total_correct = (yg_test==np.argmax(yg_pred, axis=1)).astype(np.int8).sum()\n",
-    "        # total_incorrect = (yg_test!=np.argmax(yg_pred, axis=1)).astype(np.int8).sum()\n",
-    "\n",
-    "        # all_e_accuracy.append(e_accuracy)\n",
-    "        # all_g_accuracy.append(g_accuracy)\n",
-    "\n",
-    "        # compute fidelity \n",
-    "        # fidelity = 0.5*(e_accuracy + g_accuracy)\n",
-    "        # all_fidelity[jdx, idx] = fidelity\n",
     "        print('\\n===================================')\n",
     "        print(f'Start location = {start_location}, Window size = {window_size}')\n",
     "        print('    Accuracy', test_acc)\n",
@@ -555,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = '_2-layer_scan_window_size_and_location_window_size_600_770.npz'\n",
+    "outfile = '_2-layer_scan_window_size_and_location_window_size_0_770.npz'\n",
     "note = f'Training data on 0528, readout fidelity with 2-layer NN, scanned window size and location, window size 770'\n",
     "\n",
     "np.savez(\n",
